[gd_scene load_steps=18 format=3 uid="uid://8u8vygjmn473"]

[ext_resource type="PackedScene" uid="uid://cn1cvpdr81sc7" path="res://scenes/overworld/SpriteHolderEnemy.tscn" id="1"]
[ext_resource type="Resource" path="res://stats/enemyencounter/enemyencounter_cheepcheep.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://b6sxe0ovnsssg" path="res://scenes/battle/HurtParticles.tscn" id="3"]
[ext_resource type="Script" path="res://scripts/battle/Balloons.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://dwnrliqytbx0s" path="res://textures/skyguy/balloon2.png" id="5"]
[ext_resource type="Texture2D" uid="uid://c5r863sb51knl" path="res://textures/skyguy/balloon1.png" id="6"]
[ext_resource type="Texture2D" uid="uid://b8xijoaerf2n" path="res://textures/skyguy/balloon3.png" id="7"]
[ext_resource type="Texture2D" uid="uid://n7ecmiglepdp" path="res://textures/skyguy/balloon5.png" id="8"]
[ext_resource type="Texture2D" uid="uid://ilcc0nh7slua" path="res://textures/skyguy/balloon4.png" id="9"]
[ext_resource type="Texture2D" uid="uid://j1kesg7rn8cc" path="res://textures/skyguy/balloon6.png" id="10"]
[ext_resource type="PackedScene" uid="uid://ddxb2t13bohu" path="res://scenes/Circles.tscn" id="11"]
[ext_resource type="Script" path="res://scripts/overworld/Enemy.tres.gd" id="12"]
[ext_resource type="Texture2D" uid="uid://brkylv5e1m6x" path="res://sprites/UI/exclamation.png" id="13_x28mi"]

[sub_resource type="CylinderShape3D" id="1"]
height = 0.1
radius = 0.137833

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}],
"loop": true,
"name": &"float",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}],
"loop": false,
"name": &"pop",
"speed": 10.0
}]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dm2vv"]
height = 0.119079
radius = 0.223295

[sub_resource type="CylinderShape3D" id="CylinderShape3D_x7px1"]
height = 2.56205
radius = 1.52175

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("12")
encounter_data = ExtResource("2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0549224, 0)
shape = SubResource("1")

[node name="Sprite2D" parent="." instance=ExtResource("1")]

[node name="Balloons" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.195498, -0.186076)
visible = false
script = ExtResource("4")

[node name="Balloons" type="AnimatedSprite3D" parent="Balloons"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.400397, 0.106382)
sprite_frames = SubResource("2")
animation = &"float"
frame = 2

[node name="HurtParticles" parent="." instance=ExtResource("3")]

[node name="Circles" parent="." instance=ExtResource("11")]
emitting = false

[node name="NormalEncounter" type="Area3D" parent="."]
transform = Transform3D(1.01, 0, 0, 0, 1.01, 0, 0, 0, 1.01, 0, 0.16, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="NormalEncounter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.077103, 0)
shape = SubResource("CylinderShape3D_dm2vv")

[node name="Detection" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="Detection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0474525, 0)
shape = SubResource("CylinderShape3D_x7px1")

[node name="Exclamation" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.439257, 0)
visible = false
billboard = 2
texture_filter = 0
texture = ExtResource("13_x28mi")

[connection signal="area_entered" from="NormalEncounter" to="." method="_on_NormalEncounter_area_entered"]
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
